feat: getCoffeeInfoSum
