# routes/coffee-route.js
@@ -7,19 +7,17 @@ router.get(
   coffeeController.getCoffeeInfo
 
   // #swagger.tags = ['COFFEE']
-  // #swagger.summary = '당일 유저 카페인 및 브랜드 조회'
+  // #swagger.summary = '기간별 단일 유저 카페인 및 잔 수 조회'
   // #swagger.responses[200] = { description: 'OK' }
   // #swagger.responses[400] = { description: 'Bad Request' }
   // #swagger.responses[500] = { description: 'Internal Server Error' }
 );
 
 router.get(
-  '/coffee/caffeine/:time',
-  (req, res) => {
-    res.json('caffeine');
-  }
+  '/coffee/caffeine/:userId',
+  coffeeController.getDaySum
   // #swagger.tags = ['COFFEE']
-  // #swagger.summary = '기간별 단일 유저 카페인 및 잔 수 조회'
+  // #swagger.summary = '당일 유저 카페인 및 브랜드 조회'
   // #swagger.responses[200] = { description: 'OK' }
   // #swagger.responses[400] = { description: 'Bad Request' }
   // #swagger.responses[500] = { description: 'Internal Server Error' }
